fix audio a contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -921,6 +921,11 @@
      font-weight: 400;
  }
 
+ #abalone_frenchPronunciation audio a {
+     text-decoration: none;
+     color: whitesmoke;
+ }
+
  #avalon section {
      padding: 60px 7%;
      background-color: #1B1B1B;
@@ -2095,11 +2100,6 @@ attribution to: Responsive Navigation based on Malia Havlicek's codepen: https:/
      #abalone_frenchPronunciation audio {
          max-width: 200px;
          width: 150px;
-     }
-
-     #abalone_frenchPronunciation a audio {
-         text-decoration: none;
-         color: whitesmoke;
      }
 
      #avalon section {
